try to fix weird spacing

--- a/src/modules/Message.css
+++ b/src/modules/Message.css
@@ -13,6 +13,7 @@ pre {
   font-family: "Inter Tight", sans-serif;
   white-space: pre-wrap;
   margin: 0;
+  padding: 0;
 }
 
 .userDisplay {
